--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "jest-sorted": "^1.0.14"
   },
   "dependencies": {
-    "pg-format": "^1.0.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
+    "pg-format": "^1.0.4",
     "supertest": "^6.2.2"
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all", 
+      "jest-extended/all",
       "jest-sorted"
     ]
   }
